--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "jszip": "^3.10.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
+    "sanitize.css": "^13.0.0",
     "uuid": "^13.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +45,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
+    "@csstools/normalize.css": "^12.1.1",
     "jest": "^27.5.1",
     "vite": "^7.1.5"
   },
